# meow-go

./: .gitattributes  .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  test-e2e.sh
.github/workflows/: e2e.yml  lint.yml  release.yml  tests.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Helpers.kt
core/: build.gradle.kts  proguard-rules.pro
core/schemas/io.github.madeye.meow.database.PrivateDatabase/: 1.json  2.json  3.json  4.json  5.json
core/src/androidTest/java/io/github/madeye/meow/database/: ProfileDaoYamlTest.kt
core/src/main/: AndroidManifest.xml
core/src/main/aidl/io/github/madeye/meow/aidl/: IMihomoService.aidl  IMihomoServiceCallback.aidl  TrafficStats.aidl
core/src/main/assets/geox/: GeoLite2-ASN.mmdb  country.mmdb  geoip.metadb
core/src/main/go/mihomo-core/: android_log.go  android_log_stub.go  engine.go  exports.go  go.mod  go.sum  jni_bridge_android.c  protect.go  protect_stub.go
core/src/main/java/io/github/madeye/meow/: Core.kt
core/src/main/java/io/github/madeye/meow/aidl/: MihomoConnection.kt  TrafficStats.kt
core/src/main/java/io/github/madeye/meow/bg/: BaseService.kt  MihomoInstance.kt  ServiceNotification.kt  VpnService.kt
core/src/main/java/io/github/madeye/meow/core/: MihomoCore.kt  MihomoEngine.kt  Tun2SocksCore.kt
core/src/main/java/io/github/madeye/meow/database/: ClashProfile.kt  DailyTraffic.kt  PrivateDatabase.kt
core/src/main/java/io/github/madeye/meow/net/: DefaultNetworkListener.kt
core/src/main/java/io/github/madeye/meow/preference/: DataStore.kt
core/src/main/java/io/github/madeye/meow/subscription/: SubscriptionFormat.kt  SubscriptionService.kt
core/src/main/java/io/github/madeye/meow/utils/: Action.kt
core/src/main/res/values/: strings.xml
core/src/main/res/values-zh-rCN/: strings.xml
core/src/main/rust/mihomo-android-ffi/: Cargo.toml
core/src/main/rust/mihomo-android-ffi/src/: diagnostics.rs  dns_table.rs  doh_client.rs  lib.rs  logging.rs  protect.rs  tun2socks.rs
core/src/main/rust/mihomo-android-ffi/src/listener/: http_proxy.rs  mixed.rs  mod.rs  socks5.rs
core/src/main/rust/mihomo-proxy-patched/: Cargo.toml
core/src/main/rust/mihomo-proxy-patched/src/: connect.rs  direct.rs  health.rs  lib.rs  reject.rs  shadowsocks_adapter.rs  trojan.rs  v2ray_plugin.rs
core/src/main/rust/mihomo-proxy-patched/src/group/: fallback.rs  mod.rs  selector.rs  urltest.rs
docs/: index.html  privacy-policy.html
docs/superpowers/plans/: 2026-04-12-nodelist-subscription.md  2026-04-12-refactor-plan.md
docs/superpowers/specs/: 2026-04-12-nodelist-subscription-design.md
fastlane/: Appfile  Fastfile  README.md  report.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1000003.txt  1000004.txt  1000005.txt  1000007.txt  1000008.txt  1000010.txt  1000011.txt  1000014.txt
flutter_module/: .metadata  pubspec.yaml
flutter_module/lib/: app.dart  main.dart
flutter_module/lib/l10n/: strings.dart
flutter_module/lib/models/: profile.dart  proxy.dart  proxy_group.dart  traffic_stats.dart  vpn_state.dart
flutter_module/lib/screens/: connections_screen.dart  diagnostics_screen.dart  home_screen.dart  logs_screen.dart  per_app_proxy_screen.dart  providers_screen.dart  rules_screen.dart  settings_screen.dart  subscriptions_screen.dart  traffic_screen.dart  yaml_editor_screen.dart
flutter_module/lib/services/: mihomo_api.dart  traffic_history.dart  vpn_channel.dart
flutter_module/lib/widgets/: mode_card.dart  proxy_groups_section.dart  sora_yaml_editor.dart
flutter_module/test/: connections_screen_test.dart  diagnostics_screen_test.dart  logs_screen_test.dart  mihomo_api_test.dart  mode_card_test.dart  profile_model_test.dart  profile_test.dart  providers_screen_test.dart  proxy_groups_section_test.dart  rules_screen_test.dart  settings_runtime_test.dart  vpn_channel_replay_test.dart  vpn_channel_yaml_test.dart
gradle/: libs.versions.toml
mobile/: build.gradle.kts  google-services.json.template  proguard-rules.pro
mobile/src/debug/: AndroidManifest.xml
mobile/src/main/: AndroidManifest.xml
mobile/src/main/assets/textmate/: languages.json
mobile/src/main/assets/textmate/yaml/syntaxes/: yaml.tmLanguage.json
mobile/src/main/java/io/github/madeye/meow/: App.kt  MainActivity.kt
mobile/src/main/res/values/: strings.xml
mobile/src/main/res/values-zh-rCN/: strings.xml
(+3 files in other folders)
