[package]
name = "mihomo-android-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "allow"  # JNI requires unsafe

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
# Runtime & sync
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
parking_lot = "0.12"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
android_logger = "0.14"
log = "0.4"

# DoH client (HTTP over SOCKS5)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Low-level
libc = "0.2"
anyhow = "1"

# JNI bridge
jni = "0.21"

# tun2socks
netstack-smoltcp = "0.2"
