[package]
name = "mihomo-android-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "allow"  # JNI requires unsafe

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
mihomo-tunnel = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.3.0" }
mihomo-config = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.3.0" }
mihomo-dns = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.3.0" }
mihomo-api = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.3.0" }
mihomo-common = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.3.0" }
mihomo-proxy = { path = "../mihomo-proxy-patched" }
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
jni = "0.21"
android_logger = "0.14"
log = "0.4"
futures = "0.3"
netstack-smoltcp = "0.2"

[patch."https://github.com/madeye/mihomo-rust.git"]
mihomo-proxy = { path = "../mihomo-proxy-patched" }
