[package]
name = "mihomo-proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
mihomo-common = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.2.0" }
tokio = { version = "1", features = ["full"] }
shadowsocks = { version = "1.21", features = ["aead-cipher-2022", "stream-cipher"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
parking_lot = "0.12"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
socket2 = "0.5"
libc = "0.2"
